temp: replace fontsource with google fonts
While I'd love to self host, until they remove the custom css property
insite the `@font-face` declaration the fonts don't work as needed.

See more details see #21

--- a/src/components/content/FeaturedPost.astro
+++ b/src/components/content/FeaturedPost.astro
@@ -24,7 +24,7 @@ const href = getEntryURL("blog", post.slug);
   </div>
   <div>
     <h2
-      class="mb-6 mt-3 max-w-md text-2xl font-semibold text-blue-900 hover:underline dark:text-blue-50 sm:mb-8 sm:text-4xl"
+      class="mb-6 text-balance mt-3 max-w-md text-2xl font-semibold text-blue-900 hover:underline dark:text-blue-50 sm:mb-8 sm:text-4xl"
     >
       <a href={href}>{meta.title}</a>
     </h2>
