--- a/src/layouts/Entry.astro
+++ b/src/layouts/Entry.astro
@@ -35,6 +35,7 @@ const { origin } = Astro.url;
 >
   <Fragment slot="head">
     <slot name="head" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet" />
   </Fragment>
   <slot />
 </Layout>
