--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -1,11 +1,12 @@
 ---
+import { Image } from "astro:assets";
 import Layout from "@/layouts/WithHeader.astro";
 import { getLocalizedPage, useTranslation, type Language, LANGUAGES } from "@/utils/i18n";
 import { getBlogEntry, slugToCanonical } from "@/utils/content";
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 import FeaturedPost from "@/components/content/FeaturedPost.astro";
 import Testimonials from "@/components/Testimonials/Container.astro";
-import ProfilePic from "@/assets/images/profile.jpg";
+import ProfilePic from "@/assets/images/profile.webp";
 interface Props {
   lang: Language;
   featuredPostSlug: string;
@@ -41,9 +42,9 @@ const t = useTranslation(lang);
       <div class="grid items-center gap-8 md:grid-cols-2 md:gap-32 lg:grid-cols-3">
         <div class="lg:col-span-2"><slot name="jumbotron" /></div>
         <div class="w-fit justify-self-center rounded-xl bg-blue-800/90 shadow-sm hover:bg-blue-800 hover:shadow-md">
-          <img
+          <Image
             alt=""
-            src={ProfilePic.src}
+            src={ProfilePic}
             width={500}
             height={500}
             loading="eager"
