--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -1,13 +1,11 @@
 ---
-import "@fontsource-variable/inter";
-import "@fontsource-variable/red-hat-display";
-
 import { DEFAULT_LOCALE } from "@/utils/i18n";
 import CommandBar from "@/components/command-bar/CommandBar";
 import OpenGraphTags from "@/components/layout/OpenGraphTags.astro";
 import { slugToCanonical } from "@/utils/content";
 import Footer from "@/components/layout/Footer.astro";
 import type { DefaultLayoutProps } from "./types";
+import './styles.css'
 
 type Props = DefaultLayoutProps;
 
@@ -72,6 +70,8 @@ const { origin } = Astro.url;
     <Footer lang={lang} translations={translations} />
     <CommandBar lang={lang} client:idle />
     <script src="./keyboard-shortcuts.ts"></script>
-    <script is:inline>navigator.serviceWorker.getRegistrations().then(rs => rs.forEach(r => r.unregister()))</script>
+    <script is:inline>
+      navigator.serviceWorker.getRegistrations().then(rs => rs.forEach(r => r.unregister()));
+    </script>
   </body>
 </html>
