--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -5,7 +5,8 @@ import OpenGraphTags from "@/components/layout/OpenGraphTags.astro";
 import { slugToCanonical } from "@/utils/content";
 import Footer from "@/components/layout/Footer.astro";
 import type { DefaultLayoutProps } from "./types";
-import './styles.css'
+import "./styles.css";
+import { getEnv } from "@/utils/env";
 
 type Props = DefaultLayoutProps;
 
@@ -26,6 +27,7 @@ const title = `${propsTitle} — Misael Taveras`;
 const image = propsImage ?? slugToCanonical(`/default-og-${lang}.png`);
 const manifest = lang === "es" ? "/manifest.json" : `/manifest-${lang}.json`;
 const { origin } = Astro.url;
+const { G_TAG_ID } = getEnv();
 ---
 
 <!DOCTYPE html>
@@ -60,6 +62,14 @@ const { origin } = Astro.url;
       } else {
         document.documentElement.classList.remove("dark");
       }
+    </script>
+    <script async type="text/partytown" src={`https://www.googletagmanager.com/gtag/js?id=${G_TAG_ID}`}></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag("js", new Date());
+
+      gtag("config", G_TAG_ID, );
     </script>
   </head>
   <body
