--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -29,7 +29,7 @@ const canonical = slugToCanonical("/404");
   lang={lang}
   description={t("page_descriptions", "not_found")}
   title={t("messages", "page_not_found")}
-  class="flex h-full flex-col dark:!bg-slate-900"
+  class="flex h-full flex-col dark:!bg-gray-900"
 >
   <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
     <div class="text-center">
@@ -39,7 +39,7 @@ const canonical = slugToCanonical("/404");
       <div class="space-x-8">
         <a
           href={homeURL}
-          class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors hover:bg-blue-100/50 active:bg-blue-100 dark:bg-slate-800 dark:hover:bg-slate-800/90 dark:active:bg-slate-800/70"
+          class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors hover:bg-blue-100/50 active:bg-blue-100 dark:bg-blue-800 dark:hover:bg-blue-800/90 dark:active:bg-blue-800/70"
           >{t("navigation", "go_home")}</a
         >
 
