--- a/src/components/layout/GoToTop.astro
+++ b/src/components/layout/GoToTop.astro
@@ -24,7 +24,7 @@ const label = t("ui", "go_top");
 </a>
 <script>
   const goTotop = document.getElementById("gtt") as HTMLLinkElement;
-  goTotop.classList.add("scale-0");
+  if (window.scrollY < window.innerHeight) goTotop.classList.add("scale-0");
   window.addEventListener("scroll", () => {
     return window.scrollY > window.innerHeight ? goTotop.classList.remove("scale-0") : goTotop.classList.add("scale-0");
   });
