adjust gotoTop position and remove footer margin-top
The GTT button overlapped with the RSS feed on the footer

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -49,7 +49,7 @@ const translations = propTranslations.concat(currentLanguage);
 ---
 
 <footer
-  class="mx-auto mt-8 w-full max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
+  class="mx-auto w-full max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
 >
   <div class="flex items-center justify-center gap-4 pb-6 sm:justify-between">
     <ThemeSelector lang={lang} client:visible />
