--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -53,7 +53,7 @@ const t = useTranslation(lang);
         </div>
       </div>
     </FullWidthBlock>
-    <FullWidthBlock withContainer class="bg-gradient-gray-slate-light dark:bg-gradient-gray-slate">
+    <FullWidthBlock withContainer class="gradient-slate-slate bg-gradient-to-b dark:gradient-gray-slate">
       <div class="gap-8 py-16 lg:grid lg:grid-cols-2 xl:py-32">
         <div class="prose dark:prose-invert xl:prose-lg prose-a:no-underline">
           <slot name="blog" />
