--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -51,7 +51,9 @@ const t = useTranslation(lang);
   <main class="h-full min-h-screen">
     <div class="h-full min-h-screen w-full">
       <div class="grid h-full min-h-screen items-center gap-4 lg:grid-cols-2">
-        <div class="h-full items-center bg-blue-200 px-6 py-4 dark:bg-slate-950 sm:px-8 lg:py-12 xl:p-32">
+        <div
+          class="h-full items-center bg-blue-200 px-6 py-4 dark:gradient-gray-slate dark:bg-gradient-to-t sm:px-8 lg:py-12 lg:dark:bg-gradient-to-l xl:p-32 xl:pt-0"
+        >
           <div class="prose grid h-full items-center dark:prose-invert xl:prose-lg">
             <div class="container">
               <h1 class="text-5xl text-blue-800 dark:text-blue-100">{frontmatter.title}</h1>
