add the good dark mode to the about page and PostCard

--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -34,7 +34,7 @@ const components = { Admonition: Admonition };
   ogType="article"
 >
   <main
-    class="prose prose-gray mx-auto mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl"
+    class="prose prose-gray mx-auto mb-12 mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl"
   >
     <div class="not-prose">
       {!!translations.length && <PostTranslations lang={meta.lang} translations={translations} />}
