--- a/src/components/content/CardPost.astro
+++ b/src/components/content/CardPost.astro
@@ -13,7 +13,7 @@ const href = getEntryURL("blog", post.slug);
 ---
 
 <div
-  class="group flex flex-col justify-between rounded-md p-4 text-slate-800 ring-blue-100 transition-all focus-within:bg-blue-50 focus-within:shadow-sm focus-within:ring-2 hover:bg-blue-50 hover:shadow-sm hover:ring-2 dark:text-slate-200 dark:ring-gray-700 dark:focus-within:bg-gray-950/50 dark:hover:bg-gray-950/50"
+  class="group flex flex-col justify-between rounded-md p-4 text-slate-800 ring-blue-100 transition-all focus-within:bg-blue-50 focus-within:shadow-sm focus-within:ring-2 hover:bg-blue-50 hover:shadow-sm hover:ring-2 dark:text-slate-200 dark:ring-gray-700 dark:focus-within:bg-gray-950/50 dark:hover:bg-gray-900"
 >
   <div>
     <a href={href} class="hover:underlinoe block focus:outline-none">
