--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -45,7 +45,7 @@ const t = useTranslation(lang);
 >
   <TranslationArchiveBanner lang={lang} type="blog" />
   <main>
-    <div class="gradient-gray-slate-light bg-gradient-to-t dark:gradient-gray-slate">
+    <div class="gradient-slate-slate bg-gradient-to-t dark:gradient-gray-slate">
       <div class="container mx-auto w-full p-8 md:py-24">
         <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
           <div class="col-span-full lg:col-span-2">
