fix the dark theme for the command bar

--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -53,7 +53,7 @@ const t = useTranslation(lang);
         </div>
       </div>
     </FullWidthBlock>
-    <FullWidthBlock withContainer class="gradient-slate-slate bg-gradient-to-b dark:gradient-gray-slate">
+    <FullWidthBlock withContainer class="gradient-slate-slate bg-gradient-to-t dark:gradient-gray-slate">
       <div class="gap-8 py-16 lg:grid lg:grid-cols-2 xl:py-32">
         <div class="prose dark:prose-invert xl:prose-lg prose-a:no-underline">
           <slot name="blog" />
@@ -73,7 +73,7 @@ const t = useTranslation(lang);
         </div>
       </div>
     </FullWidthBlock>
-    <FullWidthBlock withContainer class="bg-slate-200 py-16 dark:bg-slate-950 xl:py-32">
+    <FullWidthBlock withContainer class="xl:py-32">
       <div class="space-y-8 md:space-y-12">
         <div class="prose mx-auto dark:prose-invert xl:prose-lg">
           <slot name="testimonials" />
