feat: improve dark mode (#24)
Closes #3 
* use gray instead of slate as main dark color

gray still a bit blue-ish but not as much as slate, but also not as _gray_ as the _neutral_.

* fix dark mode for footer elements

* fix featured post not cool if parent had background

Basically the effect negative z-index made impossible to appreciate if the parent had any background color

* adjust gotoTop position and remove footer margin-top

The GTT button overlapped with the RSS feed on the footer

* complete dark styles for the home page

* make my custom gradient more align with Tailwind philosophy

* complete dark theme for blog pages

* fix dark mode for contact page

* add the good dark mode to the about page and PostCard

* change nav pages order

* fix the dark theme for the command bar

* add breathing for about section

--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -30,11 +30,11 @@ const components = { Admonition: Admonition };
   description={meta.description}
   title={meta.title}
   translations={translations}
-  ogType="article"
   image={imageURL}
+  ogType="article"
 >
   <main
-    class="prose prose-slate mx-auto mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl"
+    class="prose prose-gray mx-auto mb-12 mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl"
   >
     <div class="not-prose">
       {!!translations.length && <PostTranslations lang={meta.lang} translations={translations} />}
