--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -42,25 +42,26 @@ const t = useTranslation(lang);
   translations={translations}
   title={t("navigation", "blog")}
   description={t("page_descriptions", "blog")}
-  class="dark:!bg-gray-900"
 >
   <TranslationArchiveBanner lang={lang} type="blog" />
   <main>
-    <div class="container mx-auto w-full p-8 md:py-24">
-      <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
-        <div class="col-span-full lg:col-span-2">
-          <FeaturedPost meta={featuredPost.meta} post={featuredPost.entry} />
-        </div>
-        <!-- Semi featured -->
-        <div class="col-span-full divide-y lg:col-span-2">
-          <div class="flex h-full flex-col justify-between">
-            {posts.slice(0, 2).map(post => <CardPost meta={post.meta} post={post.entry} />)}
+    <div class="gradient-slate-slate bg-gradient-to-t dark:gradient-gray-slate">
+      <div class="container mx-auto w-full p-8 md:py-24">
+        <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
+          <div class="col-span-full lg:col-span-2">
+            <FeaturedPost meta={featuredPost.meta} post={featuredPost.entry} />
+          </div>
+          <!-- Semi featured -->
+          <div class="col-span-full divide-y lg:col-span-2">
+            <div class="flex h-full flex-col justify-between">
+              {posts.slice(0, 2).map(post => <CardPost meta={post.meta} post={post.entry} />)}
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Rest of the posts -->
-    <div class="bg-white dark:bg-gray-800">
+    <div class="">
       <div class="container mx-auto w-full px-8 py-12">
         <div class="grid gap-x-8 gap-y-4 sm:grid-cols-2 lg:grid-cols-3">
           {posts.slice(2).map(post => <CardPost meta={post.meta} post={post.entry} />)}
