feat: auto theme is back

--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -60,6 +60,8 @@ const { G_TAG_ID, VERCEL_GIT_COMMIT_SHA: COMMIT_SHA } = getEnv();
       const theme = localStorage.getItem("theme") || "auto";
       if (theme === "dark") {
         document.documentElement.classList.add("dark");
+      } else if (theme === "auto" && window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        document.documentElement.classList.add("dark");
       } else {
         document.documentElement.classList.remove("dark");
       }
