--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -10,6 +10,7 @@ import {
 import { slugToCanonical } from "@/utils/content";
 import Layout from "@/layouts/WithHeader.astro";
 import ContactForm from "@/components/forms/ContactForm";
+import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 interface Props {
   frontmatter: AboutFrontmatter;
@@ -48,22 +49,33 @@ const t = useTranslation(lang);
   title={t("navigation", PAGE)}
   translations={translations}
 >
-  <main class="h-full min-h-screen">
-    <div class="h-full min-h-screen w-full">
-      <div class="grid h-full min-h-screen items-center gap-4 lg:grid-cols-2">
-        <div
-          class="h-full items-center bg-blue-200 px-6 py-4 dark:gradient-gray-slate dark:bg-gradient-to-t sm:px-8 lg:py-12 lg:dark:bg-gradient-to-l xl:p-32 xl:pt-0"
-        >
-          <div class="prose grid h-full items-center dark:prose-invert xl:prose-lg">
-            <div class="container">
-              <h1 class="text-5xl text-blue-800 dark:text-blue-100">{frontmatter.title}</h1>
-              <p class="m-0 text-xl text-slate-600 dark:text-slate-400">{frontmatter.description}</p>
-              <slot />
+  <main
+    class="bg-gradient-to-b dark:gradient-gray-slate lg:gradient-blue-transparent dark:bg-gradient-to-t lg:bg-gradient-to-r"
+  >
+    <div class="container mx-auto h-full min-h-screen">
+      <div class="h-full min-h-screen w-full">
+        <div class="h-full min-h-screen items-center gap-4 lg:grid lg:grid-cols-2">
+          <div class="hidden px-6 py-4 sm:px-8 lg:block lg:bg-transparent lg:py-12 xl:p-32 xl:pt-0">
+            <div class="prose grid h-full items-center dark:prose-invert xl:prose-lg">
+              <div class="container">
+                <h1 class="text-5xl text-blue-800 dark:text-blue-100">{frontmatter.title}</h1>
+                <p class="m-0 text-xl text-slate-600 dark:text-slate-400">{frontmatter.description}</p>
+                <slot />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="px-6 py-4 sm:px-8 lg:mt-20 lg:py-12 xl:mt-0 xl:px-24">
-          <ContactForm client:idle action="/api/contact" lang={lang} />
+          <FullWidthBlock withContainer containerClass="h-full" class="h-full items-center bg-blue-200 dark:bg-transparent lg:hidden">
+            <div class="prose grid h-full items-center dark:prose-invert xl:prose-lg">
+              <div class="container">
+                <h1 class="text-5xl text-blue-800 dark:text-blue-100">{frontmatter.title}</h1>
+                <p class="m-0 text-xl text-slate-600 dark:text-slate-400">{frontmatter.description}</p>
+                <slot />
+              </div>
+            </div>
+          </FullWidthBlock>
+          <div class="px-6 py-4 sm:px-8 lg:mt-20 lg:py-12 xl:mt-0 xl:px-24">
+            <ContactForm client:idle action="/api/contact" lang={lang} />
+          </div>
         </div>
       </div>
     </div>
