fix: make header and footer containers instead of max-w

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -35,7 +35,7 @@ const translations = propTranslations
 ---
 
 <footer
-  class="mx-auto w-full max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
+  class="container mx-auto border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
 >
   <div class="flex items-center justify-center gap-4 pb-6 sm:justify-between">
     <ThemeSelector lang={lang} client:visible />
