--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -10,7 +10,7 @@ const t = useTranslation(lang);
 ---
 
 <header id="header" class="relative top-0 w-full bg-transparent">
-  <div class="mx-auto max-w-7xl px-2 sm:border-none sm:px-6 lg:px-8">
+  <div class="container mx-auto px-2 sm:border-none sm:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
       <a class="inline-block" href={getLocalizedPage(lang, "home")} title={t("navigation", "go_home")}>
         <svg viewBox="0 0 300 32" class="w-56 max-w-full md:w-72" fill="none" xmlns="http://www.w3.org/2000/svg">
