--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -13,7 +13,7 @@ const t = useTranslation(lang);
 ---
 
 <header id="header" class="top-0 w-full bg-white shadow-lg transition-transform dark:bg-slate-950/80">
-  <div class="mx-auto max-w-7xl px-2 md:border-none md:px-6 lg:px-8">
+  <div class="container mx-auto px-2 md:border-none md:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
         <button
