--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -35,8 +35,8 @@ const { G_TAG_ID, VERCEL_GIT_COMMIT_SHA: COMMIT_SHA } = getEnv();
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
-    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico?v=2" />
+    <link rel="alternate icon" type="image/svg+xml" href="/favicon.svg?v=2" />
+    <link rel="alternate" type="image/x-icon" href="/favicon.ico?v=2" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
     <meta name="theme-color" content="hsl(228, 84%, 5%)" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="hsl(0, 0, 100%)" />
