--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -66,13 +66,12 @@ const { G_TAG_ID, VERCEL_GIT_COMMIT_SHA: COMMIT_SHA } = getEnv();
         document.documentElement.classList.remove("dark");
       }
     </script>
-    {G_TAG_ID && <script async type="text/partytown" src={`https://www.googletagmanager.com/gtag/js?id=${G_TAG_ID}`} />}
+    <!-- Google tag (gtag.js) -->
+    {G_TAG_ID && <script async src={`https://www.googletagmanager.com/gtag/js?id=${G_TAG_ID}`} />}
     <script data-ga-id={G_TAG_ID}>
-      if (document.currentScript && document.currentScript.dataset.gaId) {
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          window.dataLayer.push(arguments);
-        }
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
 
         gtag("js", new Date());
         gtag("config", document.currentScript.dataset.gaId);
