fix: add search button event listener

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -37,7 +37,7 @@ const t = useTranslation(lang);
         </div>
         <div class="insert-0 absolute right-1 flex items-center justify-self-end pr-2 md:relative md:right-0">
           <button
-            id="search-button"
+            id="search-trigger"
             class="rounded-md p-2 hover:bg-blue-100/40 focus:outline-none focus:ring-1 dark:hover:bg-gray-700/40 dark:hover:text-white"
           >
             <span class="sr-only">{t("ui", "search")}</span>
