fix: contact page gradient

--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -50,7 +50,7 @@ const t = useTranslation(lang);
   translations={translations}
 >
   <main
-    class="bg-gradient-to-b dark:gradient-gray-slate lg:gradient-blue-transparent dark:bg-gradient-to-t lg:bg-gradient-to-r"
+    class="bg-gradient-to-b dark:gradient-gray-slate lg:gradient-blue-transparent dark:bg-gradient-to-t lg:bg-gradient-to-r dark:lg:bg-gradient-to-t"
   >
     <div class="container mx-auto h-full min-h-screen">
       <div class="h-full min-h-screen w-full">
