fix: remove unnecessary aria-hidden on mobile menu
Now that it is always visible, this is not necessary

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -57,7 +57,7 @@ const t = useTranslation(lang);
       </div>
     </div>
   </div>
-  <div class="mobile-menu grid transition-all md:hidden" id="mobile-menu" aria-hidden="true">
+  <div class="mobile-menu grid transition-all md:hidden" id="mobile-menu">
     <div class="overflow-hidden"><Nav lang={lang} isMobile activePage={basePath} /></div>
   </div>
 </header>
